Fixes bug that cause the table of contents to be rendered partially offscreen  in IE7. Also added some CSS rules to removed bullets from list items in the table of contents for IE7.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@57403 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/UsabilityInitiative/css/wikiEditor.toc.css
+++ b/extensions/UsabilityInitiative/css/wikiEditor.toc.css
@@ -22,6 +22,10 @@ body.rtl .wikiEditor-ui-toc {
 	padding: 0;
 	margin: 0.5em 1em;
 	list-style: none;
+	/* IE needs to be told in great detail how to act, or it misbehaves */
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
 }
 .wikiEditor-ui-toc ul ul {
 	padding: 0;
